--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-watch": "^6.0.1",
     "jest": "^24.9.0",
     "node-sass": "^4.13.1",
     "nodemon": "^1.19.4",
