--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visionelixir/vision",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "./dist/vision/index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "author": "Brent Honeybone",
   "license": "ISC",
   "dependencies": {
-    "@visionelixir/elixir": "^0.4.5"
+    "@visionelixir/elixir": "^0.5.8"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -51,6 +51,7 @@
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/build/",
+      "/dist",
       "/coverage/"
     ],
     "transform": {
@@ -60,9 +61,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.7",
     "@types/koa": "^2.11.3",
-    "@types/node": "^14.0.26",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -72,7 +73,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.3",
+    "ts-jest": "^26.1.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
